--- a/webapp/src/package.json
+++ b/webapp/src/package.json
@@ -16,6 +16,7 @@
         "core-util-is": "^1.0.2",
         "express": "^4.17.1",
         "moment": "^2.24.0",
+        "moment-timezone": "^0.5.27",
         "mysql": "^2.17.1",
         "numeral": "^2.0.6",
         "request": "^2.88.0",
