--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
   webapp:
     build:
       context: webapp
-    image: sunteen-reg.ut9.me:5000/workshop/main-parcel
+    # image: sunteen-reg.ut9.me:5000/workshop/main-parcel
+    image: sunteen-reg.ut9.me:5000/workshop/all-new-parcel-engine
     ports:
         - 3333:3100
