--- a/webapp/src/package.json
+++ b/webapp/src/package.json
@@ -14,6 +14,7 @@
         "bindings": "^1.5.0",
         "body-parser": "^1.19.0",
         "core-util-is": "^1.0.2",
+        "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "moment": "^2.24.0",
         "moment-timezone": "^0.5.27",
